package gloo.numberlink;

public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT
}
