package gloo.numberlink;public class Path {
}
